# weekends

./: LICENSE  README.md
web/beamy/: .editorconfig  .envrc  Cargo.toml  README.md  flake.nix
web/beamy/src/: main.rs
web/beamy/templates/: index.html
